browserbench.org: Fix a minor hyperlink font-size issue on iOS https://bugs.webkit.org/show_bug.cgi?id=290762
Reviewed by Alexey Proskuryakov.

Remove `display: inline-block`, which was causing the font size issue on iOS.

* Websites/browserbench.org/resources/main.css:
(main .navigation a,):

Canonical link: https://commits.webkit.org/292937@main

--- a/Websites/browserbench.org/resources/main.css
+++ b/Websites/browserbench.org/resources/main.css
@@ -162,7 +162,6 @@ article {
 main .navigation a,
 .announcements a,
 article a {
-    display: inline-block;
     color: rgb(200, 0, 0);
 }
 main .navigation a:hover,
